--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "greenenergyftw",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "debug": "DEBUG=greenenergyftw:* npm start"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "debug": "~2.6.9",
-    "dotenv": "^7.0.0",
-    "express": "~4.16.0",
-    "express-handlebars": "^3.0.2",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
-  }
+    "name": "greenenergyftw",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "debug": "DEBUG=greenenergyftw:* npm start"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "body-parser": "^1.19.0",
+        "cheerio": "^1.0.0-rc.3",
+        "debug": "~2.6.9",
+        "dotenv": "^7.0.0",
+        "express": "^4.16.4",
+        "express-handlebars": "^3.0.2",
+        "http-errors": "~1.6.2",
+        "mongoose": "^5.5.5",
+        "morgan": "~1.9.0"
+    }
 }
