--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express-handlebars": "^3.0.2",
         "http-errors": "~1.6.2",
         "mongoose": "^5.5.5",
-        "morgan": "~1.9.0"
+        "morgan": "~1.9.0",
+        "util": "^0.12.0"
     }
 }
