--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "body-parser": "^1.19.0",
         "cheerio": "^1.0.0-rc.3",
         "debug": "~2.6.9",
+        "dotenv": "^8.0.0",
         "express": "^4.16.4",
         "express-handlebars": "^3.0.2",
         "http-errors": "~1.6.2",
         "mongoose": "^5.5.5",
-        "morgan": "~1.9.0"
+        "morgan": "~1.9.0",
+        "nodemailer": "^6.1.1"
     }
 }
