--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "greenenergyftw",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www",
-        "debug": "DEBUG=greenenergyftw:* npm start"
-    },
-    "dependencies": {
-        "axios": "^0.18.0",
-        "body-parser": "^1.19.0",
-        "cheerio": "^1.0.0-rc.3",
-        "debug": "~2.6.9",
-        "dotenv": "^8.0.0",
-        "express": "^4.16.4",
-        "express-handlebars": "^3.0.2",
-        "http-errors": "~1.6.2",
-        "mongoose": "^5.5.5",
-        "morgan": "~1.9.0",
-        "nodemailer": "^6.1.1"
-    }
+  "name": "greenenergyftw",
+  "version": "1.0.0",
+  "private": true,
+  "main": "app.js",
+  "scripts": {
+    "start": "node ./bin/www",
+    "debug": "DEBUG=greenenergyftw:* npm start",
+    "watch": "nodemon bin/www"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "debug": "~4.1.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "http-errors": "~1.7.3",
+    "mongoose": "^5.6.8",
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.3.0"
+  }
 }
