--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "helmet": "^3.20.0",
     "http-errors": "~1.7.3",
     "mongoose": "^5.6.8",
     "morgan": "~1.9.1",
